--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </main>
     <footer>
-        <p>Challenge by <a href="#">Frontend Mentor</a>. Coded by <a href="#">Fortune Oguibe</a></p>
+        <p>Challenge by <a href="https://www.frontendmentor.io/solutions/stats-card-component-UTTySxOrvf">Frontend Mentor</a>. Coded by <a href="https://github.com/foguibe">Fortune Oguibe</a></p>
     </footer>
 </body>
 </html>
